--- a/pages/guides/konteyner/asosiy-docker-buyruqlari.en-UZ.mdx
+++ b/pages/guides/konteyner/asosiy-docker-buyruqlari.en-UZ.mdx
@@ -1,5 +1,5 @@
 import { Callout } from "nextra-theme-docs";
 
-# Eng ko'p ishlatiladigan va asosiy Docker buyruqlari
+# Eng ko'p ishlatiladigan va asosiy Docker buyruqlari Davronbek Atadjanov
 
 Bu mavzuda eng ko'p ishlatiladigan docker buyruqlarini ko'rib chiqamiz.
